Fixed overflowing causing scrolling to occur in dashboard. Sidebar heading now spaced correctly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
 #main-content {
     display: grid;
     grid-template-columns: 1fr 6fr;
+    grid-template-rows: auto 1fr;
     height: 100vh;
 }
 
@@ -152,6 +153,8 @@ body {
     padding: 16px;
     align-items: start;
     font-size: 1.2rem;
+    overflow-y: auto;
+    max-height: 100vh;
 }
 
 #sidebar-heading {
@@ -161,6 +164,8 @@ body {
     grid-template-rows: 1fr;
     justify-self: start;
     grid-column: 1 / 2;
+    padding: 0 8px;
+    gap: 12px;
 }
 
 #sidebar-heading h1 {
@@ -185,6 +190,7 @@ body {
 #sidebar-section-2 {
     grid-row: 3 / 4;
     justify-self: start;
+    align-self: self-end;
 }
 
 .sidebar-section > nav > ul {
@@ -211,7 +217,8 @@ body {
     padding: 24px;
     gap: 16px;
     row-gap: 32px;
-
+    overflow-y: auto;
+    max-height: 100%;
 }
 
 #project-section-heading {
@@ -230,6 +237,8 @@ body {
     display: grid;
     grid-row: 1 / 3;
     grid-template-rows: 40px 1fr;
+    height: fit-content;
+
 }
 
 #dashboard-announcements {
@@ -237,6 +246,8 @@ body {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
     grid-template-rows: 40px 1fr;
+    height: fit-content;
+
 }
 
 #announcement-block-container {
@@ -260,6 +271,7 @@ body {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     grid-template-rows: 40px 1fr;
+    height: fit-content;
 }
 
 #trending-block-container {
@@ -269,9 +281,20 @@ body {
     padding: 16px;
     box-shadow: var(--global-box-shadow);
 }
+#dashboard-trending, #dashboard-projects, #dashboard-announcements {
+    height: 100%;
+}
 
-#trending-block {
+.trending-block {
     display: grid;
+    grid-template-columns: 48px auto;
+    align-items: center;
+    gap: 12px;
+    line-height: 1.0;
+}
+
+.trending-user {
+    grid-column: 2 / 3;
 }
 
 .sidebar-links {
@@ -293,8 +316,8 @@ body {
 
 #dash-block-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
     gap: 16px;
 }
 
@@ -306,6 +329,8 @@ body {
     padding: 32px 16px;
     background-color: white;
     box-shadow: var(--global-box-shadow);
+    max-height: 400px;
+    overflow-y: auto;
 }
 
 .dash-block-buttons-container {
